[tool.poetry]

name = "async_btree"
version = "1.3.0"
description = "Async behavior tree"
license = "MIT"
authors = ["Jerome Guibert <jguibert@gmail.com>"]
readme = "README.md"
homepage = "https://pypi.org/project/async_btree"
documentation = "https://geronimo-iia.github.io/async-btree/"
repository = "https://github.com/geronimo-iia/async-btree"
keywords = ["behavior-tree", "asyncio"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
typing-extensions = "^4.5.0"

# Optional dependency
curio = { version = "^1.4", optional = true }

[tool.poetry.extras]
curio = ["curio"]


[tool.poetry.dev-dependencies]
black = "24.8.0"             # The uncompromising code formatter.
isort = "5.13.2"              #A Python utility / library to sort Python imports.
ruff = "^0.8.4"
mypy = "*"
types-setuptools = "^75.6.0"

# Unit Testing
pytest = "^8"                                   # pytest: simple powerful testing with Python
pytest-cov = "^5"                               # Pytest plugin for measuring coverage.
pytest-curio = "^1.1.0"
pytest-mock = "^3"
xdoctest = "^1.2.0"                            # A rewrite of the builtin doctest module
coverage = { version = "*", extras = ["toml"] }

# Documentation
mkdocs = { extras = ["markdown-include"], version = "^1.5.3" }
mkdocstrings = { extras = ["python"], version = "^0.26.1" }
mkdocs-material = "^9.5.18"
mkdocs-include-markdown-plugin = "^6.2.2"
pytest-asyncio = "^0.24.0"


[tool.poetry.group.dev.dependencies]
certifi = ">=2023.7.22,<2025.0.0"
requests = "^2.31.0"
urllib3 = "^2.0.6"

[tool.black]
# see https://black.readthedocs.io/en/stable/
target-version = ["py38"]
skip-string-normalization = true
line_length = 120

[tool.isort]
# see https://timothycrosley.github.io/isort/
combine_as_imports = true
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
force_grid_wrap = 0
ensure_newline_before_comments = true
line_length = 120


[tool.coverage.paths]
source = ["async_btree"]

[tool.coverage.run]
# see https://coverage.readthedocs.io/en/coverage-5.0.3/config.html
branch = true
data_file = ".cache/coverage"
source = ["async_btree"]
omit = ["tests/*", ".venv/*", "*/__main__.py", "examples/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --pdbcls=tests:Debugger -r sxX --cov=async_btree --cov-report=html --cov-report=term-missing:skip-covered"
cache_dir = ".cache"

[tool.ruff]
cache-dir = ".cache/ruff"
line-length = 120


[tool.mypy]
cache_dir = ".cache/mypy/"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "*.runner.*"
disable_error_code = "attr-defined"
ignore_errors = true


[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.core.masonry.api"
